syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service Health {
    rpc Check (google.protobuf.Empty) returns (HealthCheckResponse) {
        option (google.api.http) = {
            get: "/health"
        };
    }
}

service MyService {
    rpc SayHello (HelloRequest) returns (HelloResponse) {
        option (google.api.http) = {
            post: "/hello"
            body: "*"
        };
    }
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}
